# vettori

./: scorr.c  vettori1.c  vettori2.c
bubble_sort/: CMakeLists.txt  bubble_sort.c  bubble_sort_a.c  bubble_sort_b.c
bubble_sort/random/: CMakeLists.txt  random.h
conversioni/: conversioni.c
dado/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  dado.c  main.c
dado/dado/: CMakeLists.txt
dado/random/: CMakeLists.txt
esempi/: Makefile
esempi/indirizzo_vettore/: Makefile  indirizzo.c
esempi/passaggio_a_funzioni/: Makefile  vettori.c
myvect/: CMakeLists.txt  main.c
myvect/myvect/: myvect.c  myvect.h
myvect/myvect_math/: CMakeLists.txt  myvect_math.c  myvect_math.h
ricerca_binaria/: CMakeLists.txt  ricerca_binaria.c
ricerca_binaria/myvect/: myvect.h
ricerca_lineare/: CMakeLists.txt  ricerca_lineare.c
ricerca_lineare/myvect/: myvect.c
ricerche/: CMakeLists.txt  main.c
ricerche/myvect_search/: CMakeLists.txt  myvect_search.c  myvect_search.h
selection_sort/: CMakeLists.txt  selection_sort.c
selection_sort/myvect/: CMakeLists.txt
selection_sort/random/: random.c
stringhe/: maiuscolo_minuscolo.c
stringhe/concatenazione/: Makefile  concatenazione.c
stringhe/conversioni/: Makefile  conversioni.c
stringhe/lettura_stringa/: Makefile  lettura_stringa.c
stringhe/maiusc_minusc/: Makefile  main.c
stringhe/parole/: parole.c
vettori/bubble_sort/: CMakeLists.txt  bubble_sort.c
vettori/bubble_sort/myvect/: myvect.c
vettori/bubble_sort/random/: random.h
vettori/dado/: Makefile  main.c
vettori/dado/dado/: dado.h
(+6 files in other folders)
